tests/frontend/pass/smoke/smoke.act
behaviour f of A
interface f(uint x)

returns 1