tests/frontend/fail/var_aliasing.act
constructor of A
interface constructor()

creates

  uint x := 0
  uint y := 0

behaviour f of A
interface f()

storage

  x => 1
  x => 1

